k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecvi
  labels:
    name: ecvi
    environment: production
